# lzma-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bors.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: benches.yml  codecov.yml  format.yml  fuzzing.yml  lints.yml  rustdoc.yml  semver.yml  tests.yml
benches/: lzma.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/: compare_xz
fuzz/corpus/decompress_lzma2/: Cargo.toml.lzma  foo.txt.lzma
fuzz/corpus/decompress_xz/: compare_xz
fuzz/fuzz_targets/: compare_xz.rs  decompress_lzma.rs  decompress_lzma2.rs  decompress_lzma_stream.rs  decompress_xz.rs  interop_xz_decode.rs  interop_xz_encode.rs  roundtrip.rs  roundtrip_lzma.rs  roundtrip_lzma2.rs  roundtrip_xz.rs
src/: error.rs  lib.rs  macros.rs  util.rs
src/decode/: decoder.rs  delta.rs  lzbuffer.rs  lzma.rs  lzma2.rs  mod.rs  options.rs  rangecoder.rs  stream.rs  subbufread.rs  util.rs  xz.rs
src/encode/: dumbencoder.rs  lzma2.rs  mod.rs  options.rs  rangecoder.rs  stream.rs  util.rs  xz.rs
src/util/: mod.rs  vec2d.rs
src/xz/: header.rs  mod.rs
tests/: lzma.rs  lzma2.rs  stream.rs  xz.rs
tests/files/: README.md  block-check-crc32.txt  block-check-crc32.txt.xz  delta-filter-3.dat.xz  foo.txt.xz  hello.txt.lzma  hello.txt.xz  hugedict.txt.lzma  range-coder-edge-case  range-coder-edge-case.lzma  small.txt
