[package]
name = "lzma-rs"
description = "A codec for LZMA, LZMA2 and XZ written in pure Rust"
version = "0.1.3"
license = "MIT"
authors = ["Guillaume Endignoux <ggendx@gmail.com>"]
repository = "https://github.com/gendx/lzma-rs"
readme = "README.md"
categories = ["compression"]
keywords = ["lzma", "compression", "decompression"]
exclude = ["tests/*", "benches/*", "fuzz/*", ".github/*", "Cargo.lock"]
edition = "2018"

[dependencies]
byteorder = "^1.0.0"
crc = "^1.0.0"
log = { version = "^0.4.8", optional = true }
env_logger = { version = "^0.7.1", optional = true }

[features]
enable_logging = ["env_logger", "log"]
stream = []

[badges]
travis-ci = { repository = "gendx/lzma-rs", branch = "master" }
